tests/errors/first_stage/.define/expected_equal_sign/expected_equal_sign.as
; expected an equal sign in a constant definition
.define a 2